# pyTasky

./: .gitignore  LICENSE  README.md  pyproject.toml  pytasky_tasks.db
.github/workflows/: ci-cd.yml
src/: models.py  pytasky.py
tests/: test_pytasky.py
